--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
       <nav class="main-nav">
         <ul>
-          <li><a href="/" class="active">Accueil</a></li>
-          <li><a href="/about">À propos</a></li>
-          <li><a href="/privacy">Politique de confidentialité</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="index.html" >Accueil</a></li>
+          <li><a href="about.php">À propos</a></li>
+          <li><a href="blog.php">Blog</a></li>
+          <li><a href="contact.php">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -92,9 +92,9 @@
         <div class="footer-section">
           <h3>Liens Utiles</h3>
           <ul class="footer-links">
-            <li><a href="/contact">Contact</a></li>
-            <li><a href="/terms">Conditions d'utilisation</a></li>
-            <li><a href="/privacy">Politique de confidentialité</a></li>
+            <li><a href="contact.php">Contact</a></li>
+            <li><a href="blog.php">Blog</a></li>
+            <li><a href="privacy-policy.php">Politique de confidentialité</a></li>
           </ul>
         </div>
       </div>
