le travail 29/07 : 3 articles index

--- a/index.html
+++ b/index.html
@@ -85,13 +85,12 @@
             <button class="popular-city-btn" data-city="Casablanca">Casablanca</button>
             <button class="popular-city-btn" data-city="Marrakech">Marrakech</button>
             <button class="popular-city-btn" data-city="Agadir">Agadir</button>
-            <button class="popular-city-btn" data-city="Fès">Fès</button>
             <button class="popular-city-btn" data-city="Rabat">Rabat</button>
-            <button class="popular-city-btn" data-city="Tanger">Tanger</button>
+            <button class="popular-city-btn" data-city="Tangier">Tangier</button>
             <button class="popular-city-btn" data-city="Oujda">Oujda</button>
-            <button class="popular-city-btn" data-city="Meknès">Meknès</button>
-            <button class="popular-city-btn" data-city="Tétouan">Tétouan</button>
-            <button class="popular-city-btn" data-city="Laâyoune">Laâyoune</button>
+            <button class="popular-city-btn" data-city="Essaouira">Essaouira</button>
+            <button class="popular-city-btn" data-city="Taza">Taza</button>
+            <button class="popular-city-btn" data-city="Settat">Settat</button>
           </div>
           <div class="popular-cities-tip">Cliquez sur une ville pour voir la météo détaillée</div>
         </div>
