le travail 31/07 : la section de Rent A phone

--- a/index.html
+++ b/index.html
@@ -160,24 +160,27 @@
                   </div>
                 </div>
                 
-                <div class="feature-card">
-                  <div class="feature-icon">
-                    <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                      <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
-                      <line x1="8" y1="21" x2="16" y2="21"/>
-                      <line x1="12" y1="17" x2="12" y2="21"/>
-                    </svg>
-                  </div>
-                  <div class="feature-content">
-                    <h5>Responsive & moderne</h5>
-                    <p>Le site s'adapte parfaitement à tous les écrans (mobile, tablette, ordinateur) avec une interface fluide et agréable à utiliser.</p>
-                  </div>
-                </div>
+
               </div>
             </div>
             
             <div class="cta-section">
               <p class="cta-text">Sélectionnez une ville dans la liste ci-dessus ou utilisez notre recherche pour commencer à explorer les prévisions météorologiques.</p>
+            </div>
+          </div>
+        </div>
+
+        <div id="explore-section" class="mm-explore-section">
+          <h3 class="mm-explore-title">Connectez-vous sans limites</h3>
+          <div class="mm-explore-content">
+            <div class="explore-logo">
+              <img src="assets/images/logo.png" alt="Logo" class="explore-logo-img">
+            </div>
+            <div class="explore-description">
+              <p>Prêt à explorer le Maroc sans coupure ? Bénéficiez d'une connexion illimitée avec notre routeur Wi-Fi portable !</p>
+            </div>
+            <div class="explore-cta">
+              <a href="https://rentaphone.ma" class="explore-btn" target="_blank">Louer maintenant</a>
             </div>
           </div>
         </div>
