le travail 31/07 : la section de Rent A phone + adptation du log

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             
             <div class="features-wrapper">
-              <h4 class="features-title">Fonctionnalités principales</h4>
+              <h3 class="mm-intro-title">Fonctionnalités principales</h3>
               <div class="features-grid">
                 <div class="feature-card">
                   <div class="feature-icon">
