le travail 31/07 : les trucs de max et min plus la traduction et les faq

--- a/index.html
+++ b/index.html
@@ -189,24 +189,70 @@
           <h3 class="mm-faq-title">Questions fréquemment posées</h3>
           <div class="mm-faq-list">
             <div class="mm-faq-item">
-              <div class="mm-faq-question">Comment sont calculées les prévisions météorologiques ?</div>
-              <div class="mm-faq-answer">Nos prévisions sont basées sur des données provenant de stations météorologiques professionnelles et de modèles météorologiques avancés. Nous utilisons des algorithmes sophistiqués pour analyser ces données et fournir les prévisions les plus précises possible.</div>
+              <div class="mm-faq-question">Quel est le meilleur mois pour visiter le Maroc ?</div>
+              <div class="mm-faq-answer">Les mois idéaux pour combiner climat agréable et faible pluviométrie sont mai‑juin et septembre‑octobre. À cette période, 
+                les températures sont douces (20–29 °C), la pluie quasi inexistante et les conditions confortables sur tout le pays (côte, intérieur, montagnes)</div>
             </div>
-            <div class="mm-faq-item">
-              <div class="mm-faq-question">Quelle est la fréquence de mise à jour des données ?</div>
-              <div class="mm-faq-answer">Les données météorologiques sont mises à jour plusieurs fois par jour pour garantir leur précision. Les conditions actuelles sont actualisées toutes les heures, tandis que les prévisions à long terme sont révisées quotidiennement.</div>
-            </div>
-            <div class="mm-faq-item">
-              <div class="mm-faq-question">Puis-je consulter l'historique météorologique d'une ville ?</div>
-              <div class="mm-faq-answer">Cette fonctionnalité sera bientôt disponible. Nous travaillons actuellement sur l'intégration de données historiques pour permettre aux utilisateurs d'analyser les tendances météorologiques passées.</div>
-            </div>
-            <div class="mm-faq-item">
-              <div class="mm-faq-question">Les prévisions sont-elles disponibles pour les zones rurales ?</div>
-              <div class="mm-faq-answer">Oui, notre service couvre l'ensemble du territoire marocain, y compris les zones rurales et les petites localités. La précision peut varier légèrement selon la proximité des stations météorologiques.</div>
-            </div>
-          </div>
-        </div>
+            <!-- <div class="mm-faq-item">
+              <div class="mm-faq-question">Où fait-il chaud en ce moment au Maroc ?</div>
+              <div class="mm-faq-answer">Les régions intérieures et désertiques (Marrakech, Ouarzazate, désert du Sud) sont les plus chaudes, fréquemment au‑delà de 35 °C, 
+                tandis que sur la côte Atlantique (Casablanca, Essaouira, Rabat) les températures sont plus modérées, autour de 25–30 °C</div>
+            </div> -->
 
+            <div class="mm-faq-item">
+              <div class="mm-faq-question">Quelle est la saison des pluies au Maroc ?</div>
+              <div class="mm-faq-answer">La période des pluies s’étend généralement entre novembre et février, surtout sur la côte méditerranéenne, 
+                les montagnes et le nord. Le désert et les régions sud sont quasiment sèches toute l’année. L’été (juin–août) est pratiquement sans pluie presque partout dans le pays</div>
+              </div>
+
+            <div class="mm-faq-item">
+              <div class="mm-faq-question">Quel mois fait‑il froid au Maroc ?</div>
+              <div class="mm-faq-answer">Le mois le plus froid est janvier, avec des moyennes minimales autour de 6–7 °C et des maximales souvent inférieures à 18 °C dans plusieurs régions. 
+                Les nuits dans les montagnes ou le nord peuvent devenir bien plus fraîches, parfois glaciales </div>
+          </div>
+
+
+          <div class="mm-faq-item">
+              <div class="mm-faq-question">Quelle est la période la moins chère pour aller au Maroc ?</div>
+              <div class="mm-faq-answer">La période basse saison, de novembre à mars, est la plus favorable pour les petits budgets : on y trouve les tarifs les plus bas pour les vols,
+                 l’hébergement et les visites. Les mois de mai et décembre offrent aussi des tarifs attractifs. 
+                Les mois à éviter si vous recherchez des bons prix sont juin, juillet et août, pendant lesquels les tarifs de vols et hôtels sont généralement plus élevés </div>
+          </div>
+        
+
+
+          <div class="mm-faq-item">
+              <div class="mm-faq-question">Quel mois fait‑il le plus chaud au Maroc ?</div>
+              <div class="mm-faq-answer">Les mois les plus chauds sont juillet et août, période durant laquelle les températures quotidiennes peuvent atteindre 36–37 °C en moyenne nationale, 
+                et monter jusqu’à 45 °C dans les zones désertiques ou pendant les vagues de chaleur chergui</div>
+          </div>
+
+<!-- 
+          <div class="mm-faq-item">
+              <div class="mm-faq-question">Quelle période idéale pour aller au Maroc ?</div>
+              <div class="mm-faq-answer">La période idéale pour une combinaison de météo agréable, climat sec et tarifs raisonnables se situe entre mi‑avril et mai, puis septembre à novembre, 
+                lorsque la température est douce et les prix intermédiaires, avec peu de pluie et des journées agréables pour visiter, randonner ou se détendre en bord de mer</div>
+          </div> -->
+
+
+
+
+          <div class="mm-faq-item">
+              <div class="mm-faq-question">Quel mois fait‑il froid au Maroc ?</div>
+              <div class="mm-faq-answer">Le mois le plus froid est janvier, avec des moyennes minimales autour de 6–7 °C et des maximales souvent inférieures à 18 °C dans plusieurs régions. 
+                Les nuits dans les montagnes ou le nord peuvent devenir bien plus fraîches, parfois glaciales</div>
+          </div>
+
+
+
+
+          <!-- <div class="mm-faq-item">
+              <div class="mm-faq-question">Quelle est la saison des pluies au Maroc ?</div>
+              <div class="mm-faq-answer">La saison des pluies se concentre entre novembre et février, en particulier dans le nord du pays, les montagnes de l’Atlas et certaines portions de la côte méditerranéenne. 
+                Durant l'été (juin à août), les précipitations sont quasi nulles partout sauf exceptions ponctuelles dans les hauteurs des montagnes</div>
+          </div> -->
+      </div>
+      </div>
       </div>
 
       <div id="forecast-grid" class="forecast-grid hidden">
